# amnorman.github.io

./: README.md
.claude/skills/food-audit/: SKILL.md
plaud-mcp/: README.md  SETUP.md  pyproject.toml
plaud-mcp/src/plaud_mcp/: auth.py  client.py  server.py
