[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaud-mcp"
version = "0.1.0"
description = "MCP server voor Plaud Note"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
plaud-mcp = "plaud_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plaud_mcp"]
