[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaud-mcp"
version = "0.1.0"
description = "MCP server for Plaud Note — list recordings, search, summaries, transcripts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "plaud", "voice", "transcription", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Timbooktoo/amnorman.github.io/tree/main/plaud-mcp"
Issues = "https://github.com/Timbooktoo/amnorman.github.io/issues"

[project.scripts]
plaud-mcp = "plaud_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plaud_mcp"]
